add network name info

--- a/day 1/exercise_1_copper_plate_power_system.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Create empty PyPSA network\n",
-    "network = pypsa.Network()"
+    "network = pypsa.Network(name=\"d1_copperplate_example_1\")"
    ]
   },
   {
