--- a/day 1/exercise_3_working_with_pypsa_links.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# Create empty PyPSA network\n",
-    "network = pypsa.Network()\n",
+    "network = pypsa.Network(name=\"d1_copperplate_example_2\")\n",
     "# Set snapshots to the year 2023 and at hourly resolution\n",
     "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"h\", inclusive=\"left\")\n",
     "network.set_snapshots(snapshots)"
@@ -293,7 +293,7 @@
    "outputs": [],
    "source": [
     "# Create empty PyPSA network\n",
-    "network = pypsa.Network()\n",
+    "network = pypsa.Network(name=\"d1_copperplate_example_2\")\n",
     "# Set snapshots to the year 2023 and at hourly resolution\n",
     "snapshots = pd.date_range(\"01-01-2023\", \"01-01-2024\", freq=\"h\", inclusive=\"left\")\n",
     "network.set_snapshots(snapshots)\n",
