--- a/day 1/solutions/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/solutions/exercise_1_copper_plate_power_system_solution.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Create empty PyPSA network\n",
-    "network = pypsa.Network()"
+    "network = pypsa.Network(name=\"d1_copperplate_example_1\")"
    ]
   },
   {
