--- a/day 2/solutions/excercise_3_complete_green_h2_system_solution.ipynb
+++ b/day 2/solutions/excercise_3_complete_green_h2_system_solution.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# Create empty PyPSA network\n",
-    "network = pypsa.Network()"
+    "network = pypsa.Network(name=\"d2_h2_system_example_3\")"
    ]
   },
   {
