--- a/day 2/excercise_3_complete_green_h2_system.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system.ipynb
@@ -209,7 +209,7 @@
     "      carrier=???,\n",
     "      e_nom_extendable=???,\n",
     "      e_cyclic=???,\n",
-    "      ???=0, #$/MWh\n",
+    "      ???=0.01, #$/MWh\n",
     ")"
    ]
   },
@@ -232,7 +232,7 @@
     "      bus0=???,\n",
     "      bus1=???,\n",
     "      p_nom_extendable=???,\n",
-    "      ???=0, #$/MWh\n",
+    "      ???=0.01, #$/MWh\n",
     "      efficiency=1,\n",
     "      p_min_pu=???\n",
     ")"
@@ -260,7 +260,7 @@
     "\n",
     "CAPEX = 1420 * eur_to_usd  # $/MW\n",
     "FOM = 28 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0  # $/MWh variable\n",
+    "VOM = 0.01  # $/MWh variable\n",
     "\n",
     "efficiency = 1"
    ]
@@ -311,7 +311,7 @@
     "\n",
     "CAPEX = 970 * eur_to_use  # $/MW\n",
     "FOM = 16 * eur_to_use  # $/MW fixed\n",
-    "VOM = 0  # $/MWh variable\n",
+    "VOM = 0.01  # $/MWh variable\n",
     "\n",
     "efficiency = 1"
    ]
@@ -351,7 +351,7 @@
     "\n",
     "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0  # $/MWh variable\n",
+    "VOM = 0.01  # $/MWh variable\n",
     "efficiency = 0.59"
    ]
   },
@@ -526,7 +526,7 @@
     "\n",
     "CAPEX = 1590 * eur_to_usd  # $/MW\n",
     "FOM = 32 * eur_to_usd  # $/MW fixed\n",
-    "VOM = 0  # $/MWh variable\n",
+    "VOM = 0.01  # $/MWh variable\n",
     "efficiency = 0.59\n",
     "\n",
     "# Calculate marginal cost for water consumption\n",
@@ -553,7 +553,7 @@
     "lifetime_com = 25\n",
     "CAPEX_COM = 1720 * eur_to_usd  # $/MW\n",
     "FOM_COM = 34 * eur_to_usd  # $/MW fixed\n",
-    "VOM_COM = 0  # $/MWh variable"
+    "VOM_COM = 0.01  # $/MWh variable"
    ]
   },
   {
@@ -666,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.10 ('pypsa-agora')",
+   "display_name": "pypsa-h2-training",
    "language": "python",
    "name": "python3"
   },
@@ -680,12 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "d33265b03f0fd43aaae402ef36c78c0dc6832657a131e746ad77efa446788bb3"
-   }
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
